# webhook-to-napcat

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_en.md  deploy.sh  docker-compose.yml  pyproject.toml  rules.json
.github/workflows/: docker-image.yml
examples/caddy/: Caddyfile
examples/nginx/: webhook-to-napcat.conf
examples/systemd/: webhook-to-napcat.service
scripts/: fetch_bilibili_room_covers.py  webhook_to_napcat.py
tests/: test_end_tail_overwrite.py  test_template_render.py
webhook_to_napcat/: server.py
